Overlap fixes maybe

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ h2 {
 
 .box3 {
     grid-column: 1;
-    grid-row: 2;
+    grid-row: 2/4;
     position: relative; 
 }
 
@@ -83,7 +83,7 @@ h2 {
 
 .box4 {
     grid-column: 3;
-    grid-row: 2;
+    grid-row: 2/4;
     position: relative;   
 }
 
